Code cleanup and code optimization