@@ -11,11 +11,9 @@ import bundle.download.DownloadManager;
 import bundle.download.ProgressCallback;
 import bundle.gui.BundleGuiApp;
 import bundle.util.OperatingSystem;
-import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 
-import javax.swing.*;
 import java.io.*;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
@@ -25,7 +23,6 @@ import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
 import java.util.Properties;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -39,22 +36,20 @@ public final class BundleInstaller {
     public final Properties installerProperties;
     public final BundleGuiApp gui;
 
-    // Pool de threads para operaciones paralelas
+    // Pool de threads optimizado
     private static final ExecutorService EXECUTOR = Executors.newFixedThreadPool(
-            Math.max(2, Runtime.getRuntime().availableProcessors() / 2));
+            Math.min(4, Runtime.getRuntime().availableProcessors()));
 
-    // Buffer optimizado para descompresión (256KB)
+    // Buffer optimizado para descompresión
     private static final int UNZIP_BUFFER_SIZE = 256 * 1024;
 
     public BundleInstaller() {
-        DownloadManager.setup();
-
         JsonObject configObject = null;
         InstallerConfig cfg = null;
 
         System.out.println("=== Cargando configuración de modpacks ===");
 
-        // 1. Intentar cargar configuración remota primero
+        // Intentar cargar configuración remota primero
         try {
             System.out.println("Intentando cargar configuración desde GitHub API...");
             configObject = RemoteConfigLoader.loadAndValidateRemoteConfig();
@@ -67,7 +62,7 @@ public final class BundleInstaller {
             System.err.println("✗ Error al cargar configuración remota: " + e.getMessage());
         }
 
-        // 2. Si falla la configuración remota, usar configuración local como fallback
+        // Fallback a configuración local
         if (cfg == null) {
             System.out.println("Cargando configuración local de respaldo...");
             InputStream configStream = BundleInstaller.class.getClassLoader().getResourceAsStream("installer_config.json");
@@ -126,16 +121,15 @@ public final class BundleInstaller {
     }
 
     public void install(ProgressCallback progressCallback) throws IOException, DownloadException {
-        // Validar directorio seleccionado antes de operar
         if (this.gameDir == null) {
             throw new DownloadException("El directorio seleccionado esta vacio!");
         }
 
-        // Limpiar archivos parciales de forma optimizada
+        // Limpiar archivos parciales
         cleanupPartialFiles(gameDir);
 
-        // Limpiar carpetas conflictivas de forma paralela
-        deleteDirectoriesParallel(gameDir);
+        // Limpiar carpetas conflictivas
+        deleteDirectoriesOptimized(gameDir);
 
         DownloadConfig dlConfig = this.installerConfig.configs.get(selectedInstall);
         if (dlConfig == null) {
@@ -146,8 +140,7 @@ public final class BundleInstaller {
             throw new DownloadException(String.format("El directorio '%s' no existe!", gameDir));
         }
 
-        // Descargar los archivos directamente en el directorio seleccionado por el usuario (gameDir)
-        // Ahora pasamos el progressCallback al DownloadManager
+        // Descargar archivos
         List<DownloadException> errors = DownloadManager.downloadFilesTo(gameDir, dlConfig, progressCallback);
         if (!errors.isEmpty()) {
             for (DownloadException e : errors) {
@@ -156,13 +149,10 @@ public final class BundleInstaller {
             throw new IOException("Errores durante la descarga, no se puede continuar.");
         }
 
-        // Procesar todos los zips de forma optimizada
+        // Procesar archivos ZIP
         processZipFiles(gameDir);
     }
 
-    /**
-     * Limpieza optimizada de archivos parciales usando NIO.2
-     */
     private void cleanupPartialFiles(Path directory) {
         try {
             if (Files.exists(directory) && Files.isDirectory(directory)) {
@@ -185,9 +175,6 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Procesamiento optimizado de archivos ZIP con descompresión paralela
-     */
     private void processZipFiles(Path directory) throws IOException {
         try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory, "*.zip")) {
             for (Path zipFile : stream) {
@@ -199,13 +186,10 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Descompresión optimizada con NIO channels y mejor manejo de memoria
-     */
     private void unzipFileOptimized(Path zipFilePath, Path targetDir) throws IOException {
         try (ZipFile zipFile = new ZipFile(zipFilePath.toFile(), StandardCharsets.UTF_8)) {
 
-            // Primero crear todos los directorios necesarios
+            // Crear directorios necesarios
             zipFile.stream()
                     .filter(ZipEntry::isDirectory)
                     .forEach(entry -> {
@@ -217,7 +201,7 @@ public final class BundleInstaller {
                         }
                     });
 
-            // Luego extraer archivos usando streams paralelos para archivos grandes
+            // Extraer archivos
             zipFile.stream()
                     .filter(entry -> !entry.isDirectory())
                     .forEach(entry -> {
@@ -230,14 +214,10 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Extracción optimizada de una entrada del ZIP usando NIO channels
-     */
     private void extractFileEntry(ZipFile zipFile, ZipEntry entry, Path targetDir) throws IOException {
         String entryName = entry.getName();
         Path entryPath = targetDir.resolve(entryName);
 
-        // Crear directorios padre si no existen
         Files.createDirectories(entryPath.getParent());
 
         // Usar NIO channels para archivos grandes (> 1MB)
@@ -248,16 +228,12 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Extracción optimizada para archivos grandes usando NIO channels
-     */
     private void extractLargeFile(ZipFile zipFile, ZipEntry entry, Path targetPath) throws IOException {
         try (InputStream inputStream = zipFile.getInputStream(entry);
              ReadableByteChannel inputChannel = Channels.newChannel(inputStream);
              FileChannel outputChannel = FileChannel.open(targetPath,
                      StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING)) {
 
-            // Transferencia directa usando FileChannel.transferFrom
             long transferred = 0;
             long size = entry.getSize();
 
@@ -269,9 +245,6 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Extracción tradicional para archivos pequeños (más eficiente para tamaños pequeños)
-     */
     private void extractSmallFile(ZipFile zipFile, ZipEntry entry, Path targetPath) throws IOException {
         try (InputStream inputStream = zipFile.getInputStream(entry);
              OutputStream outputStream = Files.newOutputStream(targetPath,
@@ -285,35 +258,21 @@ public final class BundleInstaller {
         }
     }
 
-    /**
-     * Eliminación paralela de directorios para mejor rendimiento
-     */
-    private void deleteDirectoriesParallel(Path installDir) {
-        List<String> directoriesToDelete = ImmutableList.of(
-                "mods", "config",
-                ".fabric", "cache", ".cache"
+    private void deleteDirectoriesOptimized(Path installDir) {
+        List<String> directoriesToDelete = List.of(
+                "mods", "config", ".fabric", "cache", ".cache"
         );
 
-        // Crear tareas paralelas para eliminar directorios
-        List<CompletableFuture<Void>> deletionTasks = directoriesToDelete.stream()
-                .map(directory -> CompletableFuture.runAsync(() -> {
-                    try {
-                        deleteDirectoryOptimized(installDir.resolve(directory));
-                    } catch (IOException e) {
-                        System.err.println("Error eliminando directorio " + directory + ": " + e.getMessage());
-                    }
-                }, EXECUTOR))
-                .toList();
-
-        // Esperar a que todas las tareas terminen
-        CompletableFuture.allOf(deletionTasks.toArray(new CompletableFuture[0]))
-                .join();
+        for (String directory : directoriesToDelete) {
+            try {
+                deleteDirectoryRecursive(installDir.resolve(directory));
+            } catch (IOException e) {
+                System.err.println("Error eliminando directorio " + directory + ": " + e.getMessage());
+            }
+        }
     }
 
-    /**
-     * Eliminación optimizada de directorios usando NIO.2
-     */
-    private void deleteDirectoryOptimized(Path directory) throws IOException {
+    private void deleteDirectoryRecursive(Path directory) throws IOException {
         if (!Files.exists(directory) || !Files.isDirectory(directory)) {
             return;
         }
@@ -334,9 +293,6 @@ public final class BundleInstaller {
         });
     }
 
-    /**
-     * Cleanup del pool de threads al finalizar
-     */
     public static void shutdown() {
         EXECUTOR.shutdown();
         try {
